gccida/c0/timevar_pop
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_pop/src/timevar.c:779:10: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
popped = stack_0; 
         ^~~~~~~
         stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_pop/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_pop/src/timevar.c:782:29: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
if ( &timevars[timevara] != stack_0->timevar ) 
                            ^~~~~~~
                            stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_pop/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_pop/src/timevar.c:787:1: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
stack_0 = stack_0->next; 
^~~~~~~
stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_pop/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_pop/src/timevar.c:787:11: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
stack_0 = stack_0->next; 
          ^~~~~~~
          stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_pop/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/timevar_pop/src/obj/timevar.o] Error 1
